@startuml Game of Life

class Game {
    + window: pg.Surface
    + running: bool
    + time_since_last_generation: int
    + paused: bool
    --
    + run: () -> None
}

class Grid {
    + window: pg.Surface
    + cells: list[list[Cell]]
    --
    + draw: () -> None
    + calculate_next_generation: () -> None
    + nullify: () -> None
    + invert_cell: (tuple[int, int]) -> None
}

class Cell {
    + COLOR: str
    + SIZE: int
    + x: int
    + y: int
    + is_alive: bool
    + row_i: int
    + col_i: int
    --
    + draw: () -> None
}


' Composition (dependent)

Game "1" --* "1" Grid
Grid "1" --* "0..*" Cell

@enduml